# weightanalysis

./: .gitignore  CMakeLists.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  USAGE.md  build.sh  play.sh  requirements.txt  setup.py  test_installation.py  test_segmentation.py  view_results.py
src/cpp/: bindings.cpp
src/cpp/dynamics/: inverse_dynamics.cpp  inverse_dynamics.h  multibody_model.cpp  multibody_model.h  parameter_estimator.cpp  parameter_estimator.h
src/cpp/physics/: bar_bending.cpp  bar_bending.h
src/python/: bar_tracker.py  main.py  phase_detector.py  pose_detector.py  video_processor.py  viewer.py  visualizer.py
